@@ -146,6 +146,7 @@ CHANGELOG
   preprocessor action.
 - Fixed compilation problems on gcc, fixed ambiguity in with boost code 
   (detail namespace was ambigious).
+- Fixed predefined macro support to be thread safe.
 
 Boost V1.34.0
 - Wave Version 1.2.4
